--- a/trunk/LaTeX/preamble.tex
+++ b/trunk/LaTeX/preamble.tex
@@ -194,6 +194,13 @@ stringstyle=\color[rgb]{0.627,0.126,0.941}
 		\end{figure} 
 }
 
+% Vektor hack %
+\newcommand{\vektor}[3]{
+			\begin{pmatrix}
+				#1 \\ #2 \\ #3
+			\end{pmatrix}
+}
+
 \newcommand{\kode}[3]{
 		\lstinputlisting[caption = #1, label=lst:#2]{kode/#3}
 }
