--- a/trunk/LaTeX/BibTeX/sources.bib
+++ b/trunk/LaTeX/BibTeX/sources.bib
@@ -225,6 +225,14 @@
   url = {http://www.sas.dk/Alt-om-rejsen/Bagage/Bagageovervagt/?WT.ac=AOR-DK-bg-overvaegt}
 }
 
+@MISC{FileSeria,
+  author = {sdktsg},
+  title = {Custom Serialization  Example},
+  owner = {Kasper},
+  timestamp = {2012.05.15},
+  url = {http://www.codeproject.com/Articles/22787/Custom-Serialization-Example}
+}
+
 @MISC{solvingmaze,
   author = {SolvingMaze},
   title = {The e-Commerce shipping Calculator demo},
