--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/development/FileSerializerFunction.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/development/FileSerializerFunction.tex
@@ -4,6 +4,6 @@ The SQL databases either needs a program that can handle SQL or an Internet conn
 
 To save the data in the program a function called File Serialize is used. The function is called when the data from the program should be saved or loaded. The function lies in the file "FileSerializer.cs", which is taken from the website \citep{FileSeria} and modified for this project. The code parts which should be implemented in the classes to use the FileSerializer is described.
 \kode{Saves the values of the item to the variable "info" used by the FileSerializer. Code can be found in the luggage\_item class}{FileSerializer1}{FileSerializer1.txt}
-On listing \ref{lst:FileSerializer1} it can be seen that the "File Serializer" needs some data descriptions to turn the information from the item list into a data file. This is done by stating a kind of sentence, where the first part is the name of the certain information, which needs to be saved into the file. 
-\kode{Informs the user that data is loaded from a previously saved file. Code can be found in frmmain in the luggage\_item class}{FileSerializer2}{FileSerializer2.txt}
-For it to open the data file the program also needs to have data description on how the data is saved in the file, see listing \ref{lst:FileSerializer2}. The program gets the information from the file, where the name of the certain information is, and puts it into the class list for each of the information that is saved.
+On listing \ref{lst:FileSerializer1} it can be seen that the "File Serializer" needs some data descriptions to turn the information from the item list into a data file. This is done by stating sentence, where the first part is the name of the certain information, which needs to be saved into the file. 
+\kode{Get the values to the item from the variable info from the FileSerializer. Code can be found in the luggage\_item class}{FileSerializer2}{FileSerializer2.txt}
+To open the data file the program also needs to have data description on how the data is saved in the file, see listing \ref{lst:FileSerializer2}. The program gets the information from the file, where the name of the certain information is, and puts it into the class list for each of the information that is saved.
