--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/development/instructiondescription.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/development/instructiondescription.tex
@@ -1,4 +1,4 @@
 \section{Instruction manual}
-The instruction manual is placed in the main window and is made as a help for the user. It is made as short as possible since experiences from earlier projects show that users tend to skip parts of instructions if they are too long. The instruction manual tells the user how to use the program and how it works. The instruction manual is made on basis of how it is intended to be used.
+The instruction manual is placed in the main window (see Figure \ref{fig:Main}) and is made as a help for the user. It is made as short as possible since experiences from earlier projects show that users tend to skip parts of instructions if they are too long. The instruction manual tells the user how to use the program and how it works. The instruction manual is made on basis of how it is intended to be used.
 
 The manual is placed in the main menu because then it is the first thing the user sees, when he or she opens the program. It is also made with bullet points to keep an overview of it, and to make it easier to read.
