--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/testing/Tests.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/testing/Tests.tex
@@ -1,24 +1,24 @@
 \section{Choice of Survey Method}
-To test the person and see how a customer would react to the program. Tests were made where the test persons tried the program and they got interviewed afterwards. For the analysis and further work regarding the test results, a qualitative method has been chosen.
+To test the person and see how a user would react to the program. The user tests were made where the test persons tried the program and got interviewed afterwards. For the analysis and further work regarding the test results, a qualitative method has been chosen.
 
-For the interview there has been made a questionnaire (which can be seen on Appendix \ref{chap:questionnaire}), that will be used as a guideline in the interview to get useful information from the test person. The qualitative method is the best suited method for the project, because it gives a more specific picture of how the test person finds the program, and what problems the test person might come across during the test. It is also a good method to get suggestions to improvements from the user since it is normally easier to explain an idea while talking rather than writing. The problem with the interview is that the time it takes to analyze is longer than a questionnaire, where you quickly can analyze a lot of data. The questions at the interview need to be well thought and precise to get useful information from the test person, as they would also need to be on a questionnaire. Based on the test, improvements should be made to the program.
-It is important when making a questionnaire that it is structured correctly and that the questions are precisely formulated so the test person cannot misunderstand the meaning of the question. It is important because poorly formulated questions might lead to misunderstanding the meaning of the question which can lead to wrong or useless answers. And in such case is a questionnaire just a waste of time.
+For the interview there has been made a questionnaire (which can be seen on Appendix \ref{chap:questionnaire}), which will be used as a guideline in the interview to get useful information from the test person. The qualitative method is the best suited method for the project, because it gives a more specific picture of how the test person finds the program, and what problems the test person might come across during the test. It is also a good method to get suggestions for improvements from the user since it is normally easier to explain an idea while talking rather than writing. The problem with the interview is that the time it takes to analyze is longer than a questionnaire, where you quickly can analyze a lot of data. The questions at the interview need to be well thought and precise to get useful information from the test person, as they would also need to be on a questionnaire. Based on the test, improvements should be made to the program.
+It is important when making a questionnaire that it is structured correctly and that the questions are precisely formulated so the test person cannot misunderstand the meaning of the question. It is important because poorly formulated questions might lead to misunderstandings the meanings of the questions which can lead to wrong or useless answers. And in such case a questionnaire is  just a waste of time.
 
-So there will be made an interview based on a questionnaire after the test person has tested the program with focus on what can be improved on the program.
+An interview based on a questionnaire after the test person has tested the program with focus on what can be improved on the program will be made.
 
 \section{The First Round of Tests}
-Two tests of the program have been made on two test persons in the first round of tests. The main idea was to see if the program had any bugs and to get some suggestions to what could be improved and if anything was missing. The test persons were first given some instructions on what they were supposed to do in the test and were afterwards asked to read the instructions in the program. The test persons were to load two lists in the program and then add some missing items after having measured each item's weight and dimensions. Then afterwards they were asked to pack two suitcases. When the test persons were done packing an interview was made. Two group members were present at the testing. One was sitting documenting everything and afterwards interviewing the test person, while the other sat behind the test person to see what mistakes the test person made.
+Two tests of the program have been made on two test persons in the first round of tests. The main idea was to see if the program had any bugs and to get some suggestions to what could be improved and if anything was missing. The test persons were first given some instructions on what they were supposed to do in the test and were afterwards asked to read the instructions in the program. The test persons were to load two lists in the program and then add some missing items after having measured each item's weight and dimensions. Afterwards they were asked to pack two suitcases. When the test persons were done packing an interview was held. Two group members were present at the testing. One was sitting and documenting everything and afterwards interviewing the test person, while the other sat behind the test person to see what mistakes the test person made.
 
-After the first test some labels in the program were changed to help the understanding of the use of the program. The instructions in the program were also changed to better describe the program. The first test person did not have problems at all in packing the suitcases but stated that he/she did not find the program useful. He/she suggested adding a function making the program able to take into account if an item is bendable.
+After the first test some labels in the program were changed to help the understanding of the use of the program. The instructions in the program were also changed to describe the program better. The first test person did not have problems at all in packing the suitcases but stated that the person did not find the program useful. The person suggested adding a function making the program able to take into account if an item is bendable.
 
-The second test got interrupted because of some problems with loading one of the lists which caused a breakdown of the program. The test was retaken the day after the problem was fixed. Before the 2nd test we made some changes in the instructions, saving functions, bottom of suitcase, added some new buttons on the forms; manage suitcase, manage items, add item, and add suitcase. After we made those changes we began test 2.
+The second test got interrupted because of some problems with loading one of the lists which caused a breakdown of the program. The test was retaken the day after the bugs was corrected. Before the 2nd test we made some changes in the instructions, saving functions, added the bottom of suitcase to the 3D-viewer, added some new buttons on the forms: manage suitcase, manage items, add item, and add suitcase. After we made those changes we began test 2.
 
-The second attempt on the second test was made a short time after the first attempt. This time there were no technical problems with the program, and the test was made without more serious problems. After the test the instructions was changed again to better describe some features in the program and also describe how to rotate and drag the 3D model in the 3D-viewer. Another thing that was changed was that you now have to write the weight limit in kg instead of gram. The mistake with the program asking if you want to save the lists after you have saved them by using the button was also fixed after the test. The "Reset"-button was removed from the main window. The list in the 3D-viewer now sorts the items so the ones on the bottom is in the top of the list now. The last thing that was changed was that an image of a suitcase was added in the "Manage Suitcases"-window and a picture of several items was added to the "Manage Items"-window.
+This time there were no technical problems with the program, and the test was made without more serious problems. After the test the instructions were changed again to describe some features in the program better and also describe how to rotate and drag the 3D-model in the 3D-viewer. Another thing that was changed was that the user now has to write the weight limit in kilogram instead of gram. The mistake with the program asking if the user want to save the lists after the user has saved them by using the button was also fixed after the test. The list in the 3D-viewer now sorts the items so the ones on the bottom of the suitcase is in the top of the list now. The last thing that was changed was that an image of a suitcase was added in the "Manage Suitcases"-window and a picture of several items was added to the "Manage Items"-window.
 
 \section{The Second Round of Tests}
-In the second round of tests we tested two test persons. Some small improvements to the test method were made in this round of tests. The instructions about what would happen in the test were written down instead of just told so the test person would not forget the instructions, and the instructions them self were improved so they were easier to understand for the test persons.
+In the second round of tests we tested two test persons. Some small improvements to the test method were made in this round of tests. The instructions about what would happen in the test were written down instead of just told so the test person would not forget the instructions, and the instructions themselves were improved so they were easier to understand for the test persons.
 
-The second round of tests were made a week after the second test. The test went without any technical problems and was a success. After the two tests the following was changed. Since both test persons complained about the time it would take to put in all the info needed in the program, a drop down menu of some standard items has been added in the "Add item"-window in the "Manage items"-window. A better description of what is at the bottom in the suitcase has been added in the 3D-viewer. The little box showing the (0;0;0)-coordinate has been described in the 3D-viewer too. The problem about a lot of items being packed upright was solved and the algorithm has been optimized. A better description on how to add more of the same thing has been added to the instructions. If the user are managing a already saved list and click the "Save list to Computer"-button the program will ask the user if he/she wants to overwrite the saved list. In the 3D-viewer the unit for the suitcase's weight has been added.
+The second round of tests were made a week after the second test. The test went without any technical problems and was a success. After the two tests the following was changed: Since both test persons complained about the time it would take to put in all the info needed in the program, a drop down menu of some standard items has been added in the "Add item"-window in the "Manage items"-window. A better description of what is at the bottom of the suitcase has been added in the 3D-viewer. The little box showing the [0;0;0]-coordinate has been explained in the 3D-viewer too. The problem about a lot of items being packed upright was solved and the algorithm has been optimized. A better description on how to add more of the same items has been added to the instructions. If the user are managing an already saved list and clicks the "Save list to Computer"-button the program will ask the user if the user wants to overwrite the saved list. In the 3D-viewer the unit for the suitcase's weight has been added.
 
 \section{Conclusion on the Tests}
-The test went well and the group got some good feedback that lead to some great improvements to the program and the bugs in the program were fixed. Most of the test persons found the program useful if they had to pack a lot for a vacation. Testing more than once proved a very good idea since all the test persons had good suggestions to improvements and found minor bugs that quickly were fixed. If anything should be better next time, the group should be better prepare for the test and be sure to write down the instructions for the test person and be sure everything is ready for the tests. Despite some smaller problems regarding the testing, the result of the tests were useful for the project and therefore a good time investment.
+The tests went well and the group got some good feedback that lead to some great improvements of the program and the bugs in the program were fixed. Most of the test persons found the program useful if they had to pack a lot for a vacation. Testing more than once proved a very good idea since all the test persons had good suggestions to improvements and found minor bugs that quickly were fixed. Despite some smaller problems regarding the testing, the results of the tests were useful for the project and therefore a good time investment.
