--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/testing/testIntro.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/testing/testIntro.tex
@@ -1,1 +1,1 @@
-This section will describe the tests, the finding from the tests and the improvement on the program that came from the finding of the tests. To help ensure the program do not have any obvious bugs, test were performed on the program which can be used to help find those bugs. Therefore it is better that a person that is not a part of the project group is going to be the one testing. If it is a person from the group who is testing, he or she might not find a bug or problem with the program, because he/she is already used to the program. 
+This section will describe the tests, the results from the tests and the improvement on the program that came from the results of the tests. To help ensure that the program does not have any obvious bugs, test were performed on the program which can be used to help find those bugs. Therefore it is better that a person who is not a part of the project group is going to be the one testing. If it is a person from the group who is testing, he or she might not find a bug or problem with the program, because he/she is already used to the program. 
