--- a/trunk/LaTeX/preamble.tex
+++ b/trunk/LaTeX/preamble.tex
@@ -196,9 +196,9 @@ stringstyle=\color[rgb]{0.627,0.126,0.941}
 
 % Vektor hack %
 \newcommand{\vektor}[3]{
-			\begin{pmatrix}
+			$\begin{pmatrix}
 				#1 \\ #2 \\ #3
-			\end{pmatrix}
+			\end{pmatrix}$
 }
 
 \newcommand{\kode}[3]{
