--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/testing/Tests.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/testing/Tests.tex
@@ -13,12 +13,12 @@ After the first test some labels in the program were changed to help the underst
 
 The second test got interrupted because of some problems with loading one of the lists which caused a breakdown of the program. The test was retaken the day after the bugs was corrected. Before the 2nd test we made some changes in the instructions, saving functions, added the bottom of suitcase to the 3D-viewer, added some new buttons on the forms: manage suitcase, manage items, add item, and add suitcase. After we made those changes we began test 2.
 
-This time there were no technical problems with the program, and the test was made without more serious problems. After the test the instructions were changed again to describe some features in the program better and also describe how to rotate and drag the 3D-model in the 3D-viewer. Another thing that was changed was that the user now has to write the weight limit in kilogram instead of gram. The mistake with the program asking if the user want to save the lists after the user has saved them by using the button was also fixed after the test. The list in the 3D-viewer now sorts the items so the ones on the bottom of the suitcase is in the top of the list now. The last thing that was changed was that an image of a suitcase was added in the "Manage Suitcases"-window and a picture of several items was added to the "Manage Items"-window.
+This time there were no technical problems with the program, and the test was made without more serious problems. After the test the instructions were changed again to describe some features in the program better and also describe how to rotate and drag the 3D-model in the 3D-viewer. Another thing that was changed was that the user now has to write the weight limit in kilogram instead of gram. The mistake with the program asking if the user want to save the lists after the user has saved them by using the button was also fixed after the test. The list in the 3D-viewer now sorts the items so the ones on the bottom of the suitcase is in the top of the list now. The last thing that was changed was that an image of a suitcase was added in the "Manage Suitcases"-window and a picture of several items was added to the "Manage Items"-window, but this person thinks that the program is useful and might use it in the future.
 
 \section{The Second Round of Tests}
 In the second round of tests we tested two test persons. Some small improvements to the test method were made in this round of tests. The instructions about what would happen in the test were written down instead of just told so the test person would not forget the instructions, and the instructions themselves were improved so they were easier to understand for the test persons.
 
-The second round of tests were made a week after the second test. The test went without any technical problems and was a success. After the two tests the following was changed: Since both test persons complained about the time it would take to put in all the info needed in the program, a drop down menu of some standard items has been added in the "Add item"-window in the "Manage items"-window. A better description of what is at the bottom of the suitcase has been added in the 3D-viewer. The little box showing the [0;0;0]-coordinate has been explained in the 3D-viewer too. The problem about a lot of items being packed upright was solved and the algorithm has been optimized. A better description on how to add more of the same items has been added to the instructions. If the user are managing an already saved list and clicks the "Save list to Computer"-button the program will ask the user if the user wants to overwrite the saved list. In the 3D-viewer the unit for the suitcase's weight has been added.
+The second round of tests were made a week after the second test. The test went without any technical problems and was a success. After the two tests the following was changed: Since both test persons complained about the time it would take to put in all the info needed in the program, a drop down menu of some standard items has been added in the "Add item"-window in the "Manage items"-window. A better description of what is at the bottom of the suitcase has been added in the 3D-viewer. The little box showing the [0;0;0]-coordinate has been explained in the 3D-viewer too. The problem about a lot of items being packed upright was solved and the algorithm has been optimized. A better description on how to add more of the same items has been added to the instructions. If the user are managing an already saved list and clicks the "Save list to Computer"-button the program will ask the user if the user wants to overwrite the saved list. In the 3D-viewer the unit for the suitcase's weight has been added. This time both test persons 
 
 \section{Conclusion on the Tests}
 The tests went well and the group got some good feedback that lead to some great improvements of the program and the bugs in the program were fixed. Most of the test persons found the program useful if they had to pack a lot for a vacation. Testing more than once proved a very good idea since all the test persons had good suggestions to improvements and found minor bugs that quickly were fixed. Despite some smaller problems regarding the testing, the results of the tests were useful for the project and therefore a good time investment.
