--- a/LaTeX/Rapport - NIX PILLE/indhold/testing/Tests.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/testing/Tests.tex
@@ -18,7 +18,7 @@ This time there were no technical problems with the program, and the test was ma
 \section{The Second Round of Tests}
 In the second round of tests we tested two test persons. Some small improvements to the test method were made in this round of tests. The instructions about what would happen in the test were written down instead of just told so the test person would not forget the instructions, and the instructions themselves were improved so they were easier to understand for the test persons.
 
-The second round of tests were made a week after the second test. The test went without any technical problems and was a success. After the two tests the following was changed: Since both test persons complained about the time it would take to put in all the info needed in the program, a drop down menu of some standard items has been added in the "Add item"-window in the "Manage items"-window. A better description of what is at the bottom of the suitcase has been added in the 3D-viewer. The little box showing the [0;0;0]-coordinate has been explained in the 3D-viewer too. The problem about a lot of items being packed upright was solved and the algorithm has been optimized. A better description on how to add more of the same items has been added to the instructions. If the user are managing an already saved list and clicks the "Save list to Computer"-button the program will ask the user if the user wants to overwrite the saved list. In the 3D-viewer the unit for the suitcase's weight has been added. This time both test persons 
+The second round of tests were made a week after the second test. The test went without any technical problems and was a success. After the two tests the following was changed: Since both test persons complained about the time it would take to put in all the info needed in the program, a drop down menu of some standard items has been added in the "Add item"-window in the "Manage items"-window. A better description of what is at the bottom of the suitcase has been added in the 3D-viewer. The little box showing the [0;0;0]-coordinate has been explained in the 3D-viewer too. The problem about a lot of items being packed upright was solved and the algorithm has been optimized. A better description on how to add more of the same items has been added to the instructions. If the user are managing an already saved list and clicks the "Save list to Computer"-button the program will ask the user if the user wants to overwrite the saved list. In the 3D-viewer the unit for the suitcase's weight has been added. This time both test persons  test
 
 \section{Conclusion on the Tests}
 The tests went well and the group got some good feedback that lead to some great improvements of the program and the bugs in the program were fixed. Most of the test persons found the program useful if they had to pack a lot for a vacation. Testing more than once proved a very good idea since all the test persons had good suggestions to improvements and found minor bugs that quickly were fixed. Despite some smaller problems regarding the testing, the results of the tests were useful for the project and therefore a good time investment.
