--- a/LaTeX/Rapport - NIX PILLE/indhold/problem/problem.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/problem/problem.tex
@@ -17,7 +17,7 @@ There can also be a problem with too large or too heavy suitcases if you are tra
 To avoid this fee it can be an advantage to pack the suitcases properly and limit the choice of items to bring so the total weight does not exceed the allowed weight.
 
 \subsection{Packing}
-
+\label{sec:packingproblem}
 Because of the weight and size restrictions when traveling by plane it can sometimes be difficult to get all the items you want to bring, into a suitcase that is small enough and still does not exceeds the allowed weight. It can sometimes even be necessary to acquire more suitcases for the trip or leaving some of the items you wanted to bring. 
 
 Bringing more luggage means the passenger have to pay more to get the extra luggage on the plane \citep{altombag}. A way they might be able to avoid buying and paying for extra suitcases is to pack the suitcases more that you normally would. This on the other hand increases the suitcases weight. This should be thought through because too much weight can be unhealthy to carry around.
