--- a/LaTeX/Rapport - NIX PILLE/indhold/discussion/Discussion.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/discussion/Discussion.tex
@@ -20,7 +20,7 @@ All the requirements (see section \ref{sec:Spec}) have been meet, which can be s
 %In section \ref{sec:devalgorithm} the algorithm is explained. The algorithm distribute the items in the suitcase(s) evenly by weight and space. The algorithm also ensures that the weight limit is not exceeded. Yet the algorithm can not pack as good as a person might be able to do. One reason that a person might be better at packing, is that the program handles all the items as boxes and do not take into account, that some items might be able to be fold and bend in different shapes. This algorithm takes both weight and space into account and that way the program is capable of distributing both the weight and the space.
 
 % ret her, skrevet extra
-The problem lets the user add both items and suitcases to the program which then packs the suitcases with the items in a weight/space optimizing way. The result are then presented to the user, who then can see what has been packed and were. The items which have not been packed are shown to the user through a message box. So the program provide the user with a solution to the packing problem and thereby the program fulfills the project requirement, which can seen in appendix \ref{chap:forslag}.
+The program lets the user add both items and suitcases to the program which then packs the suitcases with the items in a weight/space optimizing way. The result are then presented to the user, who then can see what has been packed and were. The items which have not been packed are shown to the user through a message box. So the program provide the user with a solution to the packing problem and thereby the program fulfills the project requirement, which can seen in appendix \ref{chap:forslag}.
 % end
 
 To help the user to get a better visual understanding on how to pack the suitcase a 3D-image is made for the user which can be can rotated, zoomed and dragged. In the right side of the 3D-form a list is displayed. This list shows all the packed items in the selected suitcase. By selecting an item it will be marked in the 3D-image so the user will easily be able to identify any given item. An explanation of this function can be seen in section \ref{sec:3DHandler}. To help the user furthermore an algorithm has been made that ensures that any two items next to each other will have different colors, so they are easier to identify from each other. The function and a description of it can be seen in section \ref{sec:ColorGiver}.
