--- a/LaTeX/Rapport - NIX PILLE/formalia/Conclusion.tex
+++ b/LaTeX/Rapport - NIX PILLE/formalia/Conclusion.tex
@@ -2,14 +2,14 @@ The final chapter of the report is a conclusion on the whole project and a concl
 
 To make a conclusion on this project it is necessary to take a closer look on the problem statement, see section \ref{sec:thesis}. To meet and answer the problem statement, the program must be able to pack one or more suitcases by volume and weight in an effective way. It is also required that the program must present the result to the user in some way before it actually can help the user.
 
-The program is capable of packing one or more suitcases with items while using the volume as effectively within the programs reach. When mentioning the program reach is that program handles the items as boxes instead of their real shape.
-The program does not pack as effectively as possible because that will include that the program treats items as different objects and not just boxes. The program also distribute the weight evenly among the suitcases if there is more than one and checks if that the suitcases do not exceed a given limit. The program also have an user interface that fulfills the role as deliver of the result.
+The program is capable of packing one or more suitcases with items while using the volume as effectively within the programs reach. When mentioning the programs reach it is that the program handles the items as boxes instead as their real shape.
+The program does not pack as effectively as possible because that will include that the program treats items as different objects and not just boxes. The program also distributes the weight evenly among the suitcases if there is more than one and checks that the suitcases do not exceed a given limit. The program also has a user interface that fulfills the role as provider of the result.
 
-The program gives a packing solution but not as effectively as possible and thereby the program itself does not give an fully answer to the problem statement. The answer should be find through experience and knowledge gained in this project. The reason for this is that with new knowledge it will be possible to take this program and improve it so program better handles the items that should be packed. So for the program to be able to pack more effectively it must be better at handle all kind of shapes and be able place them compared to each other.
+The program gives a packing solution but not as effectively as possible and thereby the program itself does not give a full answer to the problem statement. The answer should be found through experience and knowledge gained in this project. The reason for this is that with new knowledge it will be possible to take this program and improve it so program better handles the items that should be packed. So for the program to be able to pack more effectively it must be better at handling all kinds of shapes and be able to place them compared to each other.
 
-So it can be conclude that problem statement have been answered through the work the final product but the problem statement is not answered that the product itself. The reason is that the program only gives the most effective packing solution within the criterion that items is handle as boxes.
+So it can be concluded that problem statement has been answered through the work with the final product. The problem statement is not answered through the product itself. The reason is that the program only gives the most effective packing solution within the criterion that items is handle as boxes.
 
-The program also solves the problem stated in the project suggestion, about making a program able to help with planning how to pack a suitcase (see appendix \ref{chap:forslag}. It can be concluded that the program can pack one or more suitcases using weight distributing. It might be improved by a function that handles bendable shapes, but even though the program is missing that feature it is able to pack one or more suitcases in a good and efficient way. Therefore it is a good program that helps the user with the process of packing one or more suitcases while using weight distributing but it could be improved if more time were available.
+The program also solves the problem stated in the project suggestion, about making a program able to help with planning how to pack a suitcase (see appendix \ref{chap:forslag}. It can be concluded that the program can pack one or more suitcases using weight distributing. It might be improved by a function that handles bendable shapes, but even though the program is missing that feature it is able to pack one or more suitcases in a good and efficient way. Therefore it is a sufficient program that helps the user with the process of packing one or more suitcases while using weight distributing but it could be improved if more time were available.
 
 %The program has been written in the programming language C\# and a user interface has been made to make it easier for the user to use the program. When opening the program the main window of the program will appear. Here the instructions on how to use the program will be shown so the user always have them at hand. From the main window the user can either get informations about the creators of the program, load a previous saved list, manage the lists or start the packing. The program saves the lists on the computer a user specified path. This means the program can be used at any time even without an Internet connection. 
 
