--- a/LaTeX/Process Analysis/Klar til at blive rettet anden gang/GoalsOfThisSemester.tex
+++ b/LaTeX/Process Analysis/Klar til at blive rettet anden gang/GoalsOfThisSemester.tex
@@ -1,11 +1,8 @@
-\input{preamble}
-\begin{document}
-
 \section{Goals of This Semester}
-In this semester there has been set some goals, which are meant to be reached during the semester These goals are: 
+In this semester there have been set some goals, which are meant to be reached during the semester. The goals are: 
 
 \textbf{Knowledge:} \newline
-	The student will after completed project-module be able to:
+	The student will after a completed project-module be able to:
 	\begin{itemize}
 			\item Understand and account for syntax and behavior of language constructions in a concrete programming language, and how they work.
 	\end{itemize}
@@ -20,11 +17,11 @@ In this semester there has been set some goals, which are meant to be reached du
 \textbf{Competences:} \newline
 	After completion of the project-module, the student must be able to:
 	\begin{itemize}
-		\item Delimit a problem and in this issue articulate and defend a problem, which can be solved by programming, as a main-part of the method to 		solve the problem.	
+		\item Delimit a problem and in this issue articulate and defend a problem, which can be solved by programming, as a main-part of the method to solve the problem.	
 		\item Develop a model, which can be applied in connection with the solution of the selected problem. 
-		\item Complete the work to a runable and demonstrable program, and hereby show skills at delimiting. 
+		\item Complete the work to a executable and demonstrable program, and hereby show skills at delimiting. 
 		\item Describe how the program solves a formulated problem within the context of the problem statement. 
-		\item Include relevant use-related an social aspect of solutions within computer science and software technology.
+		\item Include relevant user-related and social aspect of solutions within computer science and software technology.
 		\item Describe, reflect and analyze the gained experiences with working with a problem based project in a group.
 	\end{itemize}
 
@@ -32,9 +29,4 @@ In this semester there has been set some goals, which are meant to be reached du
 All members in the group have followed this semester's three courses: Object Oriented Programming, Computer Architecture, and Discrete Mathematics. We have used techniques and skills gained in these courses in our project.
 
 \textbf{Did we reach these goals?} \newline
-	The knowledge goal has been reached. This is reflected in our program, which is a working suitcase packing program. The skills goal has also been reached. We have implemented a larger program, and constructed both user- and unit tests on this program. We are now able to find a problem, delimit it, and solve it using programming as the main-solution to the problem. We have developed models for the program, and in the conclusion in the report, it is described how the problem solves the problem within the problem statement. We included use-related aspects of the solution by creating a program which solves the problem of packing a suitcase properly. The whole project is the result of the reflection and analyzes we have made by working with a problem based project. Therefore the competences goal has also been reached. 
-
-
-
-
-\end{document}
+	The knowledge goal has been reached. This is reflected in our program, which is a working suitcase packing program. The goal about skills has also been reached. We have implemented a larger program, and constructed both user- and unit tests on this program. We are now able to find a problem, delimit it, and solve it using programming as the main-solution to the problem. We have developed models for the program, and in the conclusion in the report, it is described how the problem solves the problem within the problem statement. We included user-related aspects of the solution by creating a program which solves the problem of packing a suitcase properly. The whole project is the result of the reflection and analysis we have made by working with a problem based project. Therefore the competences goal has also been reached. 
