--- a/LaTeX/Process Analysis/Skal sættes i process analysis/ProcessOfLearning/GoalsOfThisSemester.tex
+++ b/LaTeX/Process Analysis/Skal sættes i process analysis/ProcessOfLearning/GoalsOfThisSemester.tex
@@ -29,4 +29,4 @@ In this semester there have been set some goals, which are meant to be reached d
 All members in the group have followed this semester's three courses: Object Oriented Programming, Computer Architecture, and Discrete Mathematics. We have used techniques and skills gained in these courses in our project.
 
 \textbf{Did we reach these goals?} \newline
-	The knowledge goal has been reached. This is reflected in our program, which is a working suitcase packing program. The goal about skills has also been reached. We have implemented a larger program, and constructed both user- and unit tests on this program. We are now able to find a problem, delimit it, and solve it using programming as the main-solution to the problem. We have developed models for the program, and in the conclusion in the report, it is described how the problem solves the problem within the problem statement. We included user-related aspects of the solution by creating a program which solves the problem of packing a suitcase properly. The whole project is the result of the reflection and analysis we have made by working with a problem based project. Therefore the competences goal has also been reached. 
+	The knowledge goal has been reached. This is reflected in our program, which is a working suitcase packing program. The goal about skills has also been reached. We have implemented a larger program, and constructed both user- and unit tests on this program. We are now able to find a problem, delimit it, and solve it using programming as the main-solution to the problem. We have developed models for the program, and in the conclusion in the report, it is described how the problem solves the problem within the problem statement. We included user-related aspects of the solution by creating a program which solves the problem of packing a suitcase properly. The whole project is the result of the reflection and analysis we have made by working with a problem based project. Therefore the competence goal has also been reached. 
